# simsplice

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  build  shuffle-fastq.sh  simsplice-test.sh  sort-fastq.sh  sort-hash-fastq.sh
comparative/: comparative.html  comparative.js  dalliance-compiled.js  invert-chainbed.sh  vcf2bed.sh  vcf2chainbed-vcfonly.sh  vcf2chainbed.sh
src/: genvcf.rs  liftover.rs  main.rs  simsplice.rs
