[package]
name = "simsplice"
version = "1.0.0"
authors = ["Ben Booth <benwbooth@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
structopt = "*"
structopt-derive = "*"
bio = "*"
duct = "*"
anyhow = "*"
interpol = "*"
num_cpus = "*"
scopeguard = "*"
rust-htslib = "*"
lazy_static = "*"
lazy-regex = "*"
slog = "*"
sloggers = "*"
rand = "*"
shell-words = "*"
flate2 = "*"
maplit = "*"
