[package]
name = "simsplice"
version = "1.0.0"
authors = ["Ben Booth <benwbooth@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
structopt = "*"
structopt-derive = "*"
bio = "*"
duct = "*"
eyre = "*"
color-eyre = "*"
interpol = "*"
num_cpus = "*"
scopeguard = "*"
rust-htslib = "*"
lazy_static = "*"
lazy-regex = "*"
slog = "*"
slog-term = "*"
rand = "*"
shell-words = "*"
flate2 = "*"
maplit = "*"
linked-hash-map = "*"

[[bin]]
name = "simsplice"
path = "src/simsplice.rs"

[[bin]]
name = "genvcf"
path = "src/genvcf.rs"
